src/test/deca/context/valid/avecObjet/eq_on_objects.deca
// Description :
//    Comparaison de deux objets.
//
// Resultats :
//    OK

class A { }
class B { }
{
    A a = new A();
    B b = new B();
    A a2 = new A();

    println(a == a2);
    println(a != a2);
    println(a == null);

    println(a == b);
    println(a != b);
} 