src/test/deca/context/invalid/avecObjet/instanceof_invalid_type.deca
// Description:
//    Test d'instanceof invalide.
//
// Resultats:
//    Ligne 7 : Le deuxième argument d'instanceof doit être une classe

class A {}

{
    A a = new A();
    boolean res;
    
    res = a instanceof int;
}
